# OM1-modules

./: .gitignore  .pre-commit-config.yaml  .typos.toml  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: lint.yml  release.yml  unitest.yml
docker/: Dockerfile.embed  Dockerfile.riva  Dockerfile.vila  docker-compose-llm.yml  docker-compose.yml  qa_engine.py
docker/docker-compose/: docker-compose.yml
docker/embedding-service/: Dockerfile  docker-compose.yml  embedding_server.py
docker/scripts/: embedding_server.py  start_riva.sh
src/embedding/: embedding_server.py
src/embedding_service/: qa_data_combine.pkl  qa_engine.py
src/om1_ml/: client.py
src/om1_ml/anonymizationSys/: scrfd_trt_pixelate.py
src/om1_speech/: __init__.py  main.py
src/om1_speech/audio/: __init__.py  audio_input_stream.py  audio_output_live_stream.py  audio_output_stream.py  audio_rtsp_input_stream.py
src/om1_speech/processor/: connection_processor.py
src/om1_speech/prometheus/: __init__.py
src/om1_speech/riva/: args.py  asr_processor.py  audio_device_input.py  audio_stream_input.py  tts_processor.py
src/om1_utils/: __init__.py
src/om1_utils/healthcheck/: healthcheck.py
src/om1_utils/logging/: __init__.py  logging_info.py
src/om1_utils/singleton/: singleton.py
src/om1_utils/ws/: client.py  server.py
src/om1_vlm/: __init__.py  main.py
src/om1_vlm/anonymizationSys/: scrfd_trt_pixelate.py
src/om1_vlm/config/: config.py  config_manager.py
src/om1_vlm/interfaces/: video_stream_input_interface.py  vlm_processor_interface.py
src/om1_vlm/nv_nano_llm/: args.py  prompts.py  video_device_input.py  video_stream_input.py  vlm_processor.py
src/om1_vlm/processor/: connection_processor.py
src/om1_vlm/video/: __init__.py  logging_info.py  video_rtsp_stream.py  video_stream.py  video_stream_blur_face.py  video_stream_mp.py  video_zenoh_stream.py
src/om1_vlm/vila_vlm/: __init__.py  (+5 more)
src/zenoh_idl/: status_msgs.py
src/zenoh_msgs/: __init__.py
(+44 files in other folders)
