[tool.poetry]
name = "om1_modules"
version = "0.1.0"
description = "ML modules for om1"
authors = ["openmind.org"]
readme = "README.md"
packages = [
    { include = "om1_speech", from = "src" },
    { include = "om1_utils", from = "src" },
    { include = "om1_vlm", from = "src" },
    { include = "zenoh_msgs", from = "src" }
]

[tool.poetry.scripts]
om1_tts = "om1_speech.audio.audio_output_stream:main"

[tool.poetry.dependencies]
pycuda = { version = "2024.1.2", optional = true }
python = ">=3.9,<4.0"
pyaudio = "^0.2.13"
numpy = "^2.0.2"
websockets = "^13.0"
opencv-python = "^4.5.0"
requests = "^2.32.4"
protobuf = "^5.29.3"
google = "^3.0.0"
pyrealsense2 = {version = "2.55.1.6486", markers = "sys_platform == 'win32'", optional = true}
pyrealsense2-macosx = {version = "^2.54.2", markers = "sys_platform == 'darwin'", optional = true}
eclipse-zenoh = "^1.4.0"
pycdr2 = "^1.0.0"
torch = { url = "https://developer.download.nvidia.com/compute/redist/jp/v61/pytorch/torch-2.5.0a0+872d972e41.nv24.08.17622132-cp310-cp310-linux_aarch64.whl", optional = true }

[tool.poetry.extras]
realsense = ["pyrealsense2", "pyrealsense2-macosx"]
jetson61 = ["torch"]
gpu = ["pycuda"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-asyncio = "^0.19.0"
black = "^24.10.0"
isort = "^5.13.2"
ruff = "^0.9.2"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = "(.venv)|(/src/om1_vlm/gz/msgs)"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = [".venv*", "/src/om1_vlm/gz/msgs"]

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["src/om1_vlm/gz/msgs"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203", "E501"]

fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
